refactor(algorithms): decouple ConfigurationStoreService from rate limiter algorithms, update test structure